--- a/public/landing-page/css/style.css
+++ b/public/landing-page/css/style.css
@@ -594,12 +594,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     position: relative;
     z-index: 1; }
   .hero .slides {
-    background: #ffffff;
+    /*background: #ffffff;*/
     max-width: 800px;
     left: -100px;
     z-index: 0;
     position: relative;
-    border-radius: 200px;
+    border-radius: 16px;
     -webkit-box-shadow: 0 25px 50px -10px rgba(26, 55, 77, 0.4);
     box-shadow: 0 25px 50px -10px rgba(26, 55, 77, 0.4);
     height: 608px;
@@ -609,7 +609,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         left: 0; } }
     .hero .slides img {
       position: absolute;
-      border-radius: 200px;
+      border-radius: 16px;
       opacity: 0;
       -webkit-transition: 4s opacity ease;
       -o-transition: 4s opacity ease;
